version/0.19/_sources/api/solver/_autosummary/settings/strength.rst.txt
:orphan:

.. _strength:

strength
========

.. autoclass:: ansys.fluent.core.solver.settings_241.strength.strength
    :show-inheritance:

.. rubric:: Attributes

==================================   =======================================================

Attribute                                                                            Summary

==================================   =======================================================
:ref:`option <option_8>`                 Specify how the boundary condition will be defined.

:ref:`value <value_4>`                              Specify value as constant or expression.

:ref:`profile_name <profile_name>`                          Specify the name of the profile.

:ref:`field_name <field_name>`                                Specify the name of the field.

:ref:`udf <udf>`                              Specify the name of the user-defined function.

==================================   =======================================================

.. rubric:: Included in:

============================================   =======================================

Parent                                                                         Summary

============================================   =======================================
:ref:`momentum <momentum>`                                         Help not available.

:ref:`fan_child <fan_child>`                               'child_object_type' of fan.

:ref:`phase_child <phase_child_4>`                       'child_object_type' of phase.

:ref:`momentum <momentum_1>`                                       Help not available.

:ref:`momentum <momentum_2>`                                       Help not available.

:ref:`momentum <momentum_5>`                                       Help not available.

:ref:`porous_jump_child <porous_jump_child>`       'child_object_type' of porous_jump.

:ref:`phase_child <phase_child_16>`                      'child_object_type' of phase.

:ref:`radiator_child <radiator_child>`                'child_object_type' of radiator.

:ref:`phase_child <phase_child_20>`                      'child_object_type' of phase.

============================================   =======================================

