version/0.22/_sources/api/solver/_autosummary/settings/strength.rst.txt
:orphan:

.. _strength:

strength
========

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.strength.strength
    :show-inheritance:

.. rubric:: Attributes

==================================   =======================================================

Attribute                                                                            Summary

==================================   =======================================================
:ref:`option <option_17>`                Specify how the boundary condition will be defined.

:ref:`value <value_13>`                             Specify value as constant or expression.

:ref:`profile_name <profile_name>`                          Specify the name of the profile.

:ref:`field_name <field_name>`                                Specify the name of the field.

:ref:`udf <udf>`                              Specify the name of the user-defined function.

==================================   =======================================================

.. rubric:: Included in:

================================================================   =========================================

Parent                                                                                               Summary

================================================================   =========================================
:ref:`momentum <momentum>`                                                               Help not available.

:ref:`pressure_jump_specification <pressure_jump_specification>`       Pressure jump specification settings.

:ref:`momentum <momentum_1>`                                                             Help not available.

:ref:`momentum <momentum_2>`                                                             Help not available.

:ref:`momentum <momentum_6>`                                                             Help not available.

:ref:`porous_jump <porous_jump>`                                                         Help not available.

:ref:`radiator <radiator>`                                                               Help not available.

================================================================   =========================================

